HODS-70 : Adding appUrl to be overriden

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,7 @@ include "backend.conf"
 # ~~~~~
 
 appName = organisations-details-api
+appUrl = CHANGEME
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
