HODS-70 : Fixes for docs raml file being "missing".

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,7 +24,7 @@ appUrl = CHANGEME
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
 # Primary entry point for all HTTP requests on Play applications
-play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+play.http.requestHandler = "uk.gov.hmrc.organisationsdetailsapi.handlers.VersioningRequestHandler"
 
 # Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
 # An audit connector must be provided.
@@ -79,6 +79,16 @@ controllers {
     needsLogging = false
     needsAuditing = false
   }
+}
+
+versioning {
+
+  unversionedContexts = [
+    "/api",
+    "/admin",
+    "/ping"
+  ]
+
 }
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
