HODS-77 : Tests run, issues caused by AsyncWordSpec and missing json encryption key

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,6 +52,8 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # ~~~~~
 play.i18n.langs = ["en"]
 
+json.encryption.key = "fqpLDZ4smuDsekHkrEBlCA=="
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
