HODS-151 | Added IfConnector and tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,7 +41,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.organisationsdetailsapi.handlers.CustomErrorHandler"
+
 
 # Play Modules
 # ~~~~
