--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,3 +134,47 @@ microservice {
   }
 }
 
+api-config {
+    scopes {
+        "read:organisations-details-ho-ssp" {
+            fields = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M"]
+        }
+    }
+    endpoints {
+        corporation-tax {
+            title = "Get the organisation's Corporation Tax details"
+            endpoint = "/organisations/details/corporation-tax/?matchId=<matchId>"
+            fields {
+                A = "value/taxpayerStartDate",
+                B = "value/accountingPeriods/apStartDate",
+                C = "value/accountingPeriods/apEndDate",
+                D = "value/accountingPeriods/turnover",
+                E = "value/taxSolvencyStatus"
+            }
+        }
+
+        self-assessment {
+            title = "Get the organisation's Self Assessment details"
+            endpoint = "/organisations/details/self-assessment/?matchId=<matchId>"
+            fields {
+                F = "value/startDate",
+                G = "value/taxYears/businessSalesTurnover",
+                H = "value/taxYears/taxyear",
+                I = "value/taxSolvencyStatus"
+            }
+        }
+
+        number-of-employees {
+            title = "Get the organisation's Number Of Employees details"
+            endpoint = "/organisations/details/number-of-employees?matchId=<matchId>"
+            fields {
+                J = "references/counts/employeeCount",
+                K = "references/payeReference",
+                L = "references/districtNumber",
+                M = "references/counts/dateTaken"
+            }
+        }
+    }
+}
+
+
