HODS-302 : Updates to config.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,24 +143,24 @@ api-config {
     endpoints {
         corporation-tax {
             title = "Get the organisation's Corporation Tax details"
-            endpoint = "/organisations/details/corporation-tax/?matchId=<matchId>"
+            endpoint = "/organisations/details/corporation-tax?matchId=<matchId>"
             fields {
-                A = "value/taxpayerStartDate",
-                B = "value/accountingPeriods/apStartDate",
-                C = "value/accountingPeriods/apEndDate",
-                D = "value/accountingPeriods/turnover",
-                E = "value/taxSolvencyStatus"
+                A = "taxpayerStartDate",
+                B = "accountingPeriods/apStartDate",
+                C = "accountingPeriods/apEndDate",
+                D = "accountingPeriods/turnover",
+                E = "taxSolvencyStatus"
             }
         }
 
         self-assessment {
             title = "Get the organisation's Self Assessment details"
-            endpoint = "/organisations/details/self-assessment/?matchId=<matchId>"
+            endpoint = "/organisations/details/self-assessment?matchId=<matchId>"
             fields {
-                F = "value/startDate",
-                G = "value/taxYears/businessSalesTurnover",
-                H = "value/taxYears/taxyear",
-                I = "value/taxSolvencyStatus"
+                F = "startDate",
+                G = "taxYears/businessSalesTurnover",
+                H = "taxYears/taxyear",
+                I = "taxSolvencyStatus"
             }
         }
 
