HODS-174 : added tests around service. FAILING TEST on not found in service. WIP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -131,6 +131,11 @@ microservice {
       host = localhost
       port = 8500
     }
+
+    organisations-matching-api {
+      host = localhost
+      port = 9657
+    }
   }
 }
 
