--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,6 +47,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
+play.modules.enabled += "uk.gov.hmrc.organisationsdetailsapi.config.ConfigModule"
 
 
 # The application languages
@@ -114,7 +115,6 @@ auditing {
     }
   }
 }
-
 
 microservice {
   metrics {
