--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,6 +103,8 @@ metrics {
   enabled = true
 }
 
+mongodb.uri = "mongodb://127.0.0.1:27017/organisations-details-api"
+
 # Microservice specific config
 
 auditing {
@@ -135,6 +137,13 @@ microservice {
     organisations-matching-api {
       host = localhost
       port = 9657
+    }
+
+    integration-framework {
+      host = localhost
+      port = 8443
+      authorization-token = IF_BEARER_TOKEN
+      environment = isit
     }
   }
 }
