Fix to correct taxYears to taxyears to match IF schema for SA

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -171,8 +171,8 @@ api-config {
             endpoint = "/organisations/details/self-assessment?matchId=<matchId>"
             fields {
                 F = "startDate",
-                G = "taxYears/businessSalesTurnover",
-                H = "taxYears/taxyear",
+                G = "taxyears/businessSalesTurnover",
+                H = "taxyears/taxyear",
                 I = "taxSolvencyStatus"
             }
         }
