HODS-404: Updated handler pattern files and updated all sections accordingly.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -151,42 +151,50 @@ api-config {
     scopes {
         "read:organisations-details-ho-ssp" {
             fields = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M"]
+            endpoints = []
         }
     }
     endpoints {
+        internal {
         corporation-tax {
             title = "Get the organisation's Corporation Tax details"
             endpoint = "/organisations/details/corporation-tax?matchId=<matchId>"
-            fields {
-                A = "taxpayerStartDate",
-                B = "accountingPeriods/apStartDate",
-                C = "accountingPeriods/apEndDate",
-                D = "accountingPeriods/turnover",
-                E = "taxSolvencyStatus"
-            }
+            fields = [A,B,C,D,E]
         }
 
         self-assessment {
             title = "Get the organisation's Self Assessment details"
             endpoint = "/organisations/details/self-assessment?matchId=<matchId>"
-            fields {
-                F = "startDate",
-                G = "taxyears/businessSalesTurnover",
-                H = "taxyears/taxyear",
-                I = "taxSolvencyStatus"
-            }
+            fields = ["F","G","H","I"]
         }
 
         number-of-employees {
             title = "Get the organisation's Number Of Employees details"
             endpoint = "/organisations/details/number-of-employees?matchId=<matchId>"
-            fields {
-                J = "references/counts/employeeCount",
-                K = "references/payeReference",
-                L = "references/districtNumber",
-                M = "references/counts/dateTaken"
-            }
+            fields = ["J","K","L","M"]
         }
+      }
+    }
+
+    fields {
+        #corporation-tax
+        A = "taxpayerStartDate",
+        B = "accountingPeriods/apStartDate",
+        C = "accountingPeriods/apEndDate",
+        D = "accountingPeriods/turnover",
+        E = "taxSolvencyStatus"
+
+        #self assessment
+        F = "startDate",
+        G = "taxyears/businessSalesTurnover",
+        H = "taxyears/taxyear",
+        I = "taxSolvencyStatus"
+
+        # number of employees
+        J = "references/counts/employeeCount",
+        K = "references/payeReference",
+        L = "references/districtNumber",
+        M = "references/counts/dateTaken"
     }
 }
 
