--- a/conf/application.conf
+++ b/conf/application.conf
@@ -151,7 +151,6 @@ api-config {
     scopes {
         "read:organisations-details-ho-ssp" {
             fields = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M"]
-            endpoints = []
         }
     }
     endpoints {
@@ -159,7 +158,7 @@ api-config {
         corporation-tax {
             title = "Get the organisation's Corporation Tax details"
             endpoint = "/organisations/details/corporation-tax?matchId=<matchId>"
-            fields = [A,B,C,D,E]
+            fields = ["A","B","C","D","E"]
         }
 
         self-assessment {
