--- a/conf/application.conf
+++ b/conf/application.conf
@@ -142,6 +142,15 @@ microservice {
   }
 }
 
+api {
+  access {
+    version-1.0 {
+      status = "BETA"
+      endpointsEnabled = true
+    }
+  }
+}
+
 api-config {
     scopes {
         "read:organisations-details-ho-ssp" {
