MOJ-123: Remove 7 scopes from HO SSP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,7 +154,7 @@ api {
 api-config {
     scopes {
         "read:organisations-details-ho-ssp" {
-            fields = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M"]
+            fields = ["E", "I", "J", "K", "L", "M"]
         }
     }
     endpoints {
