Adding raml docs for comparison & adding security section in yaml
Signed-off-by: Ali Mahmood <ali.mahmood@digital.hmrc.gov.uk>

--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: Organisations Details
   contact: {}
@@ -13,6 +13,10 @@ servers:
     description: Sandbox
   - url: https://api.service.hmrc.gov.uk
     description: PRD
+
+security:
+  - userRestricted:
+      - assigned
 
 paths:
   /organisations/details/corporation-tax:
