--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -3,6 +3,8 @@ info:
   title: Organisations Details
   contact: {}
   version: '1.0'
+  description: |
+    This API allows users to check HMRC records to find information about an organisation.
 
 servers:
   - url: https://api.isc.development.tax.service.gov.uk
@@ -353,6 +355,18 @@ paths:
                     code: NOT_FOUND
       deprecated: false
 components:
+  securitySchemes:
+    userRestricted:
+      type: oauth2
+      description: |
+        HMRC supports OAuth 2.0 for authenticating user restricted API requests using an OAuth 2.0 Bearer Token in the AUTHORIZATION header.
+        See https://developer.service.hmrc.gov.uk/api-documentation/docs/authorisation/user-restricted-endpoints for details.
+      flows:
+        authorizationCode:
+          authorizationUrl: https://api.service.hmrc.gov.uk/oauth/authorize
+          tokenUrl: https://api.service.hmrc.gov.uk/oauth/token
+          refreshUrl: https://api.service.hmrc.gov.uk/oauth/refresh
+          scopes: { }
   schemas:
     errorResponse:
       title: errorResponse
