HODS-499: Add ho-ssp scope

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -156,6 +156,9 @@ api-config {
         "read:organisations-details-ho-suv" {
             fields = ["E", "I", "J", "K", "L", "M"]
         }
+        "read:organisations-details-ho-ssp" {
+            fields = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M"]
+        }
     }
     endpoints {
         internal {
