hods-591: vat field definitions added

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,8 +155,8 @@ api-config {
     scopes {
         "read:organisations-details-ho-suv" {
             fields = [
-                "E", "I", "J", "K", "L", "M",
-;                 "N", "O", "..." todo
+                "E", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T"
+
             ]
         }
         "read:organisations-details-ho-ssp" {
@@ -186,9 +186,7 @@ api-config {
         vat {
             title = "Get the organisation's VAT return details"
             endpoint = "/organisations/details/vat?matchId=<matchId>"
-            fields = [
-;                 "N", "O", ".."
-            ] # todo
+            fields = ["N","O","P","Q","R","S","T"]
         }
       }
     }
@@ -214,9 +212,13 @@ api-config {
         M = "references/counts/dateTaken"
 
         # vat todo
-;         N =
-;         O =
-;         ..
+        N = "appDate"
+        O = "taxYears/taxYear"
+        P = "taxYears/vatReturns/calendarMonth"
+        Q = "taxYears/vatReturns/liabilityMonth"
+        R = "taxYears/vatReturns/numMonthsAssessed"
+        S = "taxYears/vatReturns/box6Total"
+        T = "taxYears/vatReturns/returnType"
     }
 }
 
