--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,8 +155,8 @@ api-config {
     scopes {
         "read:organisations-details-ho-suv" {
             fields = [
-                "E", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T"
-
+                "E", "I", "J", "K", "L", "M",
+                "N", "O", "P", "Q", "R", "S", "T", "U"
             ]
         }
         "read:organisations-details-ho-ssp" {
@@ -186,7 +186,7 @@ api-config {
         vat {
             title = "Get the organisation's VAT return details"
             endpoint = "/organisations/details/vat?matchId=<matchId>"
-            fields = ["N","O","P","Q","R","S","T"]
+            fields = ["N","O","P","Q","R","S","T","U"]
         }
       }
     }
@@ -211,7 +211,7 @@ api-config {
         L = "references/districtNumber",
         M = "references/counts/dateTaken"
 
-        # vat todo
+        # vat
         N = "appDate"
         O = "taxYears/taxYear"
         P = "taxYears/vatReturns/calendarMonth"
@@ -219,6 +219,7 @@ api-config {
         R = "taxYears/vatReturns/numMonthsAssessed"
         S = "taxYears/vatReturns/box6Total"
         T = "taxYears/vatReturns/returnType"
+        U = "taxYears/vatReturns/source"
     }
 }
 
