--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,7 +154,10 @@ api {
 api-config {
     scopes {
         "read:organisations-details-ho-suv" {
-            fields = ["E", "I", "J", "K", "L", "M"]
+            fields = [
+                "E", "I", "J", "K", "L", "M",
+                "N", "O", "P", "Q", "R", "S", "T", "U"
+            ]
         }
         "read:organisations-details-ho-ssp" {
             fields = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M"]
@@ -179,6 +182,12 @@ api-config {
             endpoint = "/organisations/details/number-of-employees?matchId=<matchId>"
             fields = ["J","K","L","M"]
         }
+
+        vat {
+            title = "Get the organisation's VAT return details"
+            endpoint = "/organisations/details/vat?matchId=<matchId>"
+            fields = ["N","O","P","Q","R","S","T","U"]
+        }
       }
     }
 
@@ -190,7 +199,7 @@ api-config {
         D = "accountingPeriods/turnover",
         E = "taxSolvencyStatus"
 
-        #self assessment
+        # self assessment
         F = "startDate",
         G = "taxyears/businessSalesTurnover",
         H = "taxyears/taxyear",
@@ -201,6 +210,16 @@ api-config {
         K = "references/payeReference",
         L = "references/districtNumber",
         M = "references/counts/dateTaken"
+
+        # vat
+        N = "appDate"
+        O = "taxYears/taxYear"
+        P = "taxYears/vatReturns/calendarMonth"
+        Q = "taxYears/vatReturns/liabilityMonth"
+        R = "taxYears/vatReturns/numMonthsAssessed"
+        S = "taxYears/vatReturns/box6Total"
+        T = "taxYears/vatReturns/returnType"
+        U = "taxYears/vatReturns/source"
     }
 }
 
