HODS-646: change config w new field names

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -213,13 +213,15 @@ api-config {
 
         # vat
         N = "appDate"
-        O = "taxYears/taxYear"
-        P = "taxYears/vatReturns/calendarMonth"
-        Q = "taxYears/vatReturns/liabilityMonth"
-        R = "taxYears/vatReturns/numMonthsAssessed"
-        S = "taxYears/vatReturns/box6Total"
-        T = "taxYears/vatReturns/returnType"
-        U = "taxYears/vatReturns/source"
+        O = "extractDate"
+        P = "vatPeriods/periodKey"
+        Q = "vatPeriods/billingPeriodFromDate"
+        R = "vatPeriods/billingPeriodToDate"
+        S = "vatPeriods/numDaysAssessed"
+        T = "vatPeriods/box6Total"
+        U = "vatPeriods/returnType"
+        V = "vatPeriods/source"
+
     }
 }
 
