HODS-646: description edits

--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -424,7 +424,7 @@ paths:
                           returnType: "Regular Return"
                           source: "VMF"
         '400':
-          description: ''
+          description: Bad Request
           headers: { }
           content:
             application/json:
