--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,7 +155,7 @@ api-config {
         "read:organisations-details-ho-suv" {
             fields = [
                 "E", "I", "J", "K", "L", "M",
-                "N", "O", "P", "Q", "R", "S", "T", "U"
+                "N", "O", "P", "Q", "R", "S", "T", "U", "V"
             ]
         }
         "read:organisations-details-ho-ssp" {
@@ -185,7 +185,7 @@ api-config {
         vat {
             title = "Get the organisation's VAT return details"
             endpoint = "/organisations/details/vat?matchId=<matchId>"
-            fields = ["N","O","P","Q","R","S","T","U"]
+            fields = ["N","O","P","Q","R","S","T","U","V"]
         }
       }
     }
