--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -523,31 +523,31 @@ components:
       properties:
         periodKey:
           type: string
-          description: The period key.
+          description: The VAT period (VMF) or Period Assignment Key (ETMP VAT) for the return being reported.
           example: "23AG"
         billingPeriodFromDate:
           type: String
-          description: The billing period from date.
+          description: The date the VAT period return starts. Date Format is in yyyy-MM-dd (ISO 8601).
           example: "2023-08-30"
         billingPeriodToDate:
           type: String
-          description: The billing period to date.
+          description: The date the VAT period return ends. Date Format is in yyyy-MM-dd (ISO 8601).
           example: "2023-08-30"
         numDaysAssessed:
           type: String
-          description: The numDaysAssessed.
+          description: The number of days between billingPeriodFromDate and billingPeriodToDate inclusively.
           example: 30
         box6Total:
           type: String
-          description: The box6Total
+          description: Box6 total outputs where the return is filed.
           example: 6542
         returnType:
           type: String
-          description: The return type.
+          description: Return received date if populated then 'Regular return' else if CA issued then 'Central Assessment' else 'ICR Issued' from VMF/VLDS.
           example: "Regular Return"
         source:
           type: String
-          description: The source.
+          description: Sourced from “ADR(ETMP)” or “VMF”
           example: "VMF"
     VatReturnsDetailsResponse:
       title: VatReturnsDetailsResponse
@@ -561,11 +561,11 @@ components:
             - description: A list of links for possible actions related to this endpoint.
         vrn:
           type: string
-          description: VAT registration number.
+          description: The VRN that was passed in.
           example: "123456789"
         appDate:
           type: String
-          description: Date of the application.
+          description: The date of the application. Date Format is in yyyyMMdd.
           example: "20160425"
         extractDate:
           type: string
