HODS-646: add vrn in app.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,7 +155,7 @@ api-config {
         "read:organisations-details-ho-suv" {
             fields = [
                 "E", "I", "J", "K", "L", "M",
-                "N", "O", "P", "Q", "R", "S", "T", "U", "V"
+                "N", "O", "P", "Q", "R", "S", "T", "U", "V","W"
             ]
         }
         "read:organisations-details-ho-ssp" {
@@ -185,7 +185,7 @@ api-config {
         vat {
             title = "Get the organisation's VAT return details"
             endpoint = "/organisations/details/vat?matchId=<matchId>"
-            fields = ["N","O","P","Q","R","S","T","U","V"]
+            fields = ["N","O","P","Q","R","S","T","U","V","W"]
         }
       }
     }
@@ -211,15 +211,16 @@ api-config {
         M = "references/counts/dateTaken"
 
         # vat
-        N = "appDate"
-        O = "extractDate"
-        P = "vatPeriods/periodKey"
-        Q = "vatPeriods/billingPeriodFromDate"
-        R = "vatPeriods/billingPeriodToDate"
-        S = "vatPeriods/numDaysAssessed"
-        T = "vatPeriods/box6Total"
-        U = "vatPeriods/returnType"
-        V = "vatPeriods/source"
+        N = "vrn"
+        O = "appDate"
+        P = "extractDate"
+        Q = "vatPeriods/periodKey"
+        R = "vatPeriods/billingPeriodFromDate"
+        S = "vatPeriods/billingPeriodToDate"
+        T = "vatPeriods/numDaysAssessed"
+        U = "vatPeriods/box6Total"
+        V = "vatPeriods/returnType"
+        W ="vatPeriods/source"
 
     }
 }
